--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/style.e308ff8e.css">
-    <link rel="stylesheet" href="https://use.typekit.net/pac5kaf.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.e308ff8e.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/pac5kaf.css" />
 
     <title>Document</title>
-  <script src="/style.e308ff8e.js"></script></head>
+    <script src="/style.e308ff8e.js"></script>
+  </head>
   <body>
     <div id="wrapper">
       <div class="landing-screen-bg-container">
-        <img class="landing-screen-bg-image" src="/landing-bg.c26b1b4f.jpg" alt="Landing page bg">
+        <img
+          class="landing-screen-bg-image"
+          src="/landing-bg.c26b1b4f.jpg"
+          alt="Landing page bg"
+        />
       </div>
       <div class="landing-screen-container">
         <div class="landing-phone-container">
           <div class="landing-phone-inner">
-            <img class="landing-phone-image" src="/iPhone.156dad8f.png" alt="Placeholder phone">
+            <img
+              class="landing-phone-image"
+              src="/iPhone.156dad8f.png"
+              alt="Placeholder phone"
+            />
             <div class="battery">
               <div class="battery-level"></div>
               <ul class="battery-level-indicator-list">
@@ -40,7 +49,9 @@
             </p>
           </section>
 
-          <section class="landing-text-section landing-product-description-section">
+          <section
+            class="landing-text-section landing-product-description-section"
+          >
             <section class="landing-text-section lax">
               <h2 class="product-description-title">
                 Swapping service
@@ -76,7 +87,10 @@
           </section>
           <div class="product-description-grid">
             <div class="product-description-container">
-              <img class="product-description-image" src="/fast-charging.fccc0cfc.png">
+              <img
+                class="product-description-image"
+                src="/fast-charging.fccc0cfc.png"
+              />
               <div class="product-description-text">
                 <h2 class="product-description-header">
                   Fast charging
@@ -87,7 +101,11 @@
               </div>
             </div>
             <div class="product-description-container">
-              <img class="product-description-image" src="/charging-icon.9993e1a9.png" alt="fast-chargin">
+              <img
+                class="product-description-image"
+                src="/charging-icon.9993e1a9.png"
+                alt="fast-chargin"
+              />
               <div class="product-description-text">
                 <h2 class="product-description-header">
                   100% in iPhones
@@ -99,7 +117,11 @@
               </div>
             </div>
             <div class="product-description-container">
-              <img class="product-description-image" src="/renewable-energy-icon.c8861775.png" alt="fast-chargin">
+              <img
+                class="product-description-image"
+                src="/renewable-energy-icon.c8861775.png"
+                alt="fast-chargin"
+              />
               <div class="product-description-text">
                 <h2 class="product-description-header">
                   Renewable energy
@@ -111,7 +133,11 @@
               </div>
             </div>
             <div class="product-description-container">
-              <img class="product-description-image" src="/cables-icon.e1aa91ff.png" alt="fast-chargin">
+              <img
+                class="product-description-image"
+                src="/cables-icon.e1aa91ff.png"
+                alt="fast-chargin"
+              />
               <div class="product-description-text">
                 <h2 class="product-description-header">
                   Cable friendly
@@ -123,7 +149,11 @@
               </div>
             </div>
             <div class="product-description-container">
-              <img class="product-description-image" src="/shield-icon.eac3b7b5.png" alt="fast-chargin">
+              <img
+                class="product-description-image"
+                src="/shield-icon.eac3b7b5.png"
+                alt="fast-chargin"
+              />
               <div class="product-description-text">
                 <h2 class="product-description-header">
                   Waterproof and scratch-proof
@@ -135,7 +165,11 @@
               </div>
             </div>
             <div class="product-description-container">
-              <img class="product-description-image" src="/pocket-icon.e27735ec.png" alt="fast-chargin">
+              <img
+                class="product-description-image"
+                src="/pocket-icon.e27735ec.png"
+                alt="fast-chargin"
+              />
               <div class="product-description-text">
                 <h2 class="product-description-header">
                   Pocket friendly
@@ -153,7 +187,11 @@
               So what am I paying for?
             </h2>
             <div class="product-description-container">
-              <img class="product-description-image" src="/battery-icon.e831361c.png" alt="fast-chargin">
+              <img
+                class="product-description-image"
+                src="/battery-icon.e831361c.png"
+                alt="fast-chargin"
+              />
               <div class="payment-description-text">
                 <h2 class="product-description-header">
                   100% battery in your pocket
@@ -165,7 +203,11 @@
               </div>
             </div>
             <div class="product-description-container">
-              <img class="product-description-image" src="/swap-icon.0cfaacd7.png" alt="fast-chargin">
+              <img
+                class="product-description-image"
+                src="/swap-icon.0cfaacd7.png"
+                alt="fast-chargin"
+              />
               <div class="payment-description-text">
                 <h2 class="product-description-header">
                   Swap when your charger is empty
@@ -177,7 +219,11 @@
               </div>
             </div>
             <div class="product-description-container">
-              <img class="product-description-image" src="/volt-battery-icon.17e5524a.png" alt="fast-chargin">
+              <img
+                class="product-description-image"
+                src="/volt-battery-icon.17e5524a.png"
+                alt="fast-chargin"
+              />
               <div class="payment-description-text">
                 <h2 class="product-description-header">
                   Volt Charger deposit
